--- a/index.html
+++ b/index.html
@@ -563,8 +563,8 @@ margin-top:0
             PS:二维码下面有对应的城市，你可以选择你所在的城市或地区添加好友哦！接商业推广，啥都推！！</span></p>
           <br>
           
-          <p align="center"><img src="http://www.28581688.cn/6899/80mp.jpg" width="350" height="350" /><br>
-            临夏便民信息平台微信号 bianmin80</p>
+          <p align="center"><img src="http://www.28581688.cn/bm/lxbm.jpg" width="350" height="350" /><br>
+            临夏便民信息平台微信号 linxia900</p>
 
           <p align="center"><img src="http://www.28581688.cn/6899/dxbm.jpg" width="350" height="350" /><br>
             定西便民信息平台微信号 www28581688cn</p>
